Better UI #115 Fix footer on tablets, move breadcrumbs to the left

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2333,6 +2333,11 @@ img.profile-user-img {
   width: 200px;
 }
 
+.content-header .breadcrumb {
+  position: relative;
+  float: left;
+}
+
 .navbar-nav .campaign-menu .campaign-image {
   float: left;
   width: 25px;
